# imephu

./: .buildinfo  .gitignore  README.md  api.html  development.html  genindex.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  requirements-dev.txt  search.html  searchindex.js  setup.cfg  tox.ini
.doctrees/: api.doctree  development.doctree  environment.pickle  index.doctree  quickstart.doctree
.doctrees/notebooks/: salt.doctree
.github/workflows/: publish-documentation.yaml  run-tests.yaml
_modules/: index.html
_modules/imephu/: annotation.html  finder_chart.html  geometry.html
_sources/: index.md.txt
docs/: api.md  conf.py  development.md  index.md  quickstart.md
docs/_static/: ngc6000-zoomed-in.fits
docs/configuration-examples/: rss-longslit-own-fits.yaml  rss-longslit.yaml  salticam-non-sidereal.yaml  salticam.yaml
docs/notebooks/: salt.ipynb
jenkins/: Dockerfile  Jenkinsfile  README.md
jenkins/dev-deployment/: Jenkinsfile  README.md
jenkins/testing/: Dockerfile  Jenkinsfile  README.md
notebooks/: salt.html
src/imephu/: __init__.py  cli.py  finder_chart.py  geometry.py  schema.json  utils.py
tests/: conftest.py  test_cli.py  test_finder_chart.py  test_geometry.py  test_imephu.py  test_utils.py
tests/annotation/: test_motion_annotation.py
tests/data/: mos_mask.rsmt  mos_mask.xml  mos_mask2.rsmt  mos_mask2.xml  ngc6000_1arcmin.fits  ra0_dec0.fits  ra10_dec-45.fits  ra10_dec-60.fits  ra10_dec-60_15arcmin.fits  ra9.75_dec-60.fits
tests/imephu/: test_finder_chart.py  test_geometry.py  (+1 more)
(+72 files in other folders)
