[tool.poetry]
name = "imephu"
version = "0.7.0"
description = "Generate finder charts for astronomical observations."
authors = ["Southern African Large Telescope"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
imephu = "imephu.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
astropy = ">=5.0"
astroquery = ">=0.4.5"
jsonschema = ">=4.4.0"
python-dateutil = ">=2.8.2"
defusedxml = ">=0.7.1"
matplotlib = ">=3.1,<3.4.0 || >3.4.0"
pyyaml = ">=6.0"
requests = ">=2.27.1"
typer = {version = ">=0.4.0", extras = ["all"]}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.275"
black = "^23.3.0"
responses = "^0.23.1"
pytest-regressions = "^2.4.2"
pytest-cov = "^4.1.0"
mypy = "^1.4.1"
types-requests = "^2.31.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]
unfixable = ["B"]
ignore = ["E203", "E501"]
dummy-variable-rgx = "^ignore_me$"
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "numpy"
